correction of clusters numbers

--- a/phase1_1.ipynb
+++ b/phase1_1.ipynb
@@ -855,13 +855,15 @@
     "    ckeck in which one of those 15 state has best result for true label\n",
     "\n",
     "'''\n",
-    "def check_clusters_importance(default_images_clusters_importance):\n",
-    "    images_clusters_importance = default_images_clusters_importance\n",
+    "\n",
+    "available_clusters = [ i for i in range(k_number)]\n",
+    "\n",
+    "def check_clusters_importance():\n",
+    "    images_clusters_importance = []\n",
     "    # for each image in test\n",
     "    for img in range(n_images): \n",
     "        \n",
-    "        Effect_of_cluster_removal = images_clusters_importance[img]\n",
-    "        clusters = list(Effect_of_cluster_removal.keys())\n",
+    "        Effect_of_cluster_removal = {}\n",
     "\n",
     "        classify_results = cal_classify_results(img, remove=False)\n",
     "        classify_results_remove = cal_classify_results(img, remove=True)\n",
@@ -878,9 +880,9 @@
     "        # print(class_probability)\n",
     "        # check the effect of cluster removal\n",
     "        # for each cluster\n",
-    "        for i, cls in enumerate(clusters):\n",
+    "        for i in range(len(probs_remove[img])):\n",
     "            class_probability_after_remove = probs_remove[img][i][true_label]\n",
-    "            Effect_of_cluster_removal[cls] = class_probability_after_remove - class_probability\n",
+    "            Effect_of_cluster_removal[available_clusters[i]] = class_probability_after_remove - class_probability\n",
     "\n",
     "        # this dictionary contains the importance of\n",
     "        # clusters for an image in ascending order.\n",
@@ -911,7 +913,9 @@
     "        keys_list = list(img_clstr.keys())\n",
     "        least_important_clstr = keys_list[0]\n",
     "        modified_all_images_clusters_features.append(np.delete(all_images_clusters_features_bak[i], least_important_clstr, axis=0))\n",
-    "    \n",
+    "        \n",
+    "        available_clusters.remove(least_important_clstr)\n",
+    "\n",
     "    return modified_all_images_clusters_features"
    ]
   },
@@ -960,8 +964,7 @@
    "source": [
     "for i in range(k_number - 1):\n",
     "    print(i, \"----------------------------------------------------\")\n",
-    "    images_clusters_importance = check_clusters_importance(default_images_clusters_importance)\n",
-    "    default_images_clusters_importance = images_clusters_importance\n",
+    "    images_clusters_importance = check_clusters_importance()\n",
     "    print(np.array(images_clusters_importance[0]))\n",
     "    all_images_clusters_features_bak = remove_least_important_clusters(images_clusters_importance)\n",
     "    print(np.array(all_images_clusters_features_bak[0]))\n",
