finish phase 2 part 1

--- a/phase1_1.ipynb
+++ b/phase1_1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {
     "id": "Ohy-uGrhk_6j"
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {
     "id": "5C72evWemRM_"
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {
     "id": "PegQSxmRnEAU"
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "metadata": {
     "id": "niz6RZqTi34D"
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "metadata": {
     "id": "thgfwhB_i34F"
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {
     "id": "D_vQuK0ii34J"
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_features_freq = []\n",
     "for nf in new_features:\n",
-    "    new_features_freq.append(set_priority(np.array(nf), 4, 2).tolist())"
+    "    new_features_freq.append(set_priority(np.array(nf), 1, 5).tolist())"
    ]
   },
   {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "metadata": {
     "id": "g3BrJgCQi34K"
    },
@@ -241,13 +241,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\ewint\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  super()._check_params_vs_input(X, default_n_init=10)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  super()._check_params_vs_input(X, default_n_init=10)\n",
       "c:\\Users\\ewint\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=10)\n",
       "c:\\Users\\ewint\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
@@ -320,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,11 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for i, img_clusters in enumerate(new_clusters[:2]):\n",
+    "# for i, img_clusters in enumerate(new_clusters[:30]):\n",
     "#     display_clustering(img_clusters, each_cluster_color, i)"
    ]
   },
@@ -501,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,12 +732,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "    Extract a features for each image \n",
+    "    Extract a feature vector for each image \n",
     "    by calculating the mean of all its culsters\n",
     "\"\"\"\n",
     "def calculate_mean_imgs_clstrs_features():\n",
@@ -755,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,19 +788,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "    Extract a features for each image \n",
+    "    Extract a feature vector for each image \n",
     "    by calculating the mean of its culsters excpet one of them\n",
     "\"\"\"\n",
     "def calculate_mean_imgs_clstrs_except_index(index_, img_num, remove):\n",
     "    histograms = []\n",
     "    for i, ftr_clstrs_img in enumerate(all_images_clusters_features_bak):\n",
     "        if i == img_num and remove:\n",
-    "            histograms.append(np.mean(np.concatenate((ftr_clstrs_img[:index_], ftr_clstrs_img[index_+1:])), axis=0))\n",
+    "            histograms.append(np.mean(np.concatenate((ftr_clstrs_img[:index_],\n",
+    "                                                      ftr_clstrs_img[index_+1:])),\n",
+    "                                                      axis=0))\n",
     "        else:\n",
     "            histograms.append(np.mean(ftr_clstrs_img, axis=0))  \n",
     "\n",
@@ -815,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +820,9 @@
     "def cal_classify_results(img_num, remove):\n",
     "    classify_results = []\n",
     "    for clstr_num in range(k_number_bak):\n",
-    "        histograms = calculate_mean_imgs_clstrs_except_index(index_= clstr_num, img_num = img_num, remove=remove)\n",
+    "        histograms = calculate_mean_imgs_clstrs_except_index(index_= clstr_num,\n",
+    "                                                             img_num = img_num,\n",
+    "                                                             remove=remove)\n",
     "        rslt = classify(histograms, random_labels)\n",
     "        classify_results.append(rslt)\n",
     "    return classify_results"
@@ -832,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,20 +877,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_probs(probs, classify_results):\n",
     "    for i, prob in enumerate(probs):\n",
     "        print(np.array(prob))\n",
-    "        print(f\"acc={classify_results[i][0]}, true labels={classify_results[i][1]}, predicted labels={classify_results[i][2]}\")\n",
+    "        print(f\"acc={classify_results[i][0]},\\\n",
+    "              true labels={classify_results[i][1]},\\\n",
+    "              predicted labels={classify_results[i][2]}\")\n",
     "        print(\"---------------------------------\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,11 +931,9 @@
     "        probs_remove = cal_probs(classify_results_remove)\n",
     "        \n",
     "        true_label = classify_results[0][1][img]\n",
-    "        # print(true_label)\n",
-    "        # print(classify_results)\n",
+    "\n",
     "        class_probability = probs[img][0][true_label]\n",
-    "        # print(probs)\n",
-    "        # print(class_probability)\n",
+    "   \n",
     "        # check the effect of cluster removal\n",
     "        # for each cluster\n",
     "        for i in range(len(probs_remove[img])):\n",
@@ -962,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +969,9 @@
     "    for i, img_clstr in enumerate(images_clusters_importance):\n",
     "        keys_list = list(img_clstr.keys())\n",
     "        least_important_clstr = keys_list[0]\n",
-    "        modified_all_images_clusters_features.append(np.delete(all_images_clusters_features_bak[i], available_clusters[i].index(least_important_clstr), axis=0))\n",
+    "        modified_all_images_clusters_features.append(np.delete(all_images_clusters_features_bak[i], \n",
+    "                                                               available_clusters[i].index(least_important_clstr), \n",
+    "                                                               axis=0))\n",
     "        del available_clusters[i][available_clusters[i].index(least_important_clstr)]\n",
     "    \n",
     "    return modified_all_images_clusters_features"
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,69 +1016,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 ----------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(k_number - 1):\n",
-    "    print(i, \"----------------------------------------------------\")\n",
     "    images_clusters_importance = check_clusters_importance()\n",
-    "    print(np.array(images_clusters_importance[0]))\n",
     "    all_images_clusters_features_bak = remove_least_important_clusters(images_clusters_importance)\n",
-    "    print(np.array(all_images_clusters_features_bak[0]))\n",
-    "    k_number_bak -= 1\n",
-    "    print(\"-------------------------------------------------------\")"
+    "    k_number_bak -= 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{7: 0.0, 14: 0.0},\n",
+       "[{14: -0.009999999999999995, 12: 0.009999999999999995},\n",
+       " {12: 0.0, 14: 0.009999999999999998},\n",
+       " {12: 0.010000000000000009, 13: 0.010000000000000009},\n",
+       " {13: -0.02, 14: 0.010000000000000002},\n",
+       " {13: 0.0, 11: 0.020000000000000004},\n",
+       " {6: -0.030000000000000006, 2: 0.01999999999999999},\n",
+       " {14: 0.0, 12: 0.010000000000000009},\n",
        " {13: 0.0, 14: 0.0},\n",
-       " {6: 0.0, 7: 0.0},\n",
-       " {14: -0.03999999999999998, 13: -0.06999999999999998},\n",
-       " {12: 0.009999999999999981, 14: 0.009999999999999981},\n",
-       " {14: 0.019999999999999997, 3: 0.0},\n",
-       " {7: 0.0, 11: 0.0},\n",
-       " {11: -0.030000000000000027, 14: -0.030000000000000027},\n",
        " {13: 0.0, 14: 0.0},\n",
        " {13: 0.0, 14: 0.0},\n",
-       " {11: 0.020000000000000018, 14: -0.020000000000000018},\n",
-       " {13: 0.0, 12: -0.020000000000000018},\n",
-       " {11: 0.010000000000000009, 10: 0.0},\n",
-       " {13: 0.010000000000000009, 8: -0.08999999999999997},\n",
-       " {13: 0.0, 14: -0.010000000000000009},\n",
+       " {12: 0.0, 13: 0.0},\n",
+       " {14: 0.0, 10: 0.010000000000000009},\n",
        " {13: 0.0, 14: 0.0},\n",
-       " {9: 0.0, 14: 0.0},\n",
+       " {10: -0.010000000000000009, 13: 0.050000000000000044},\n",
+       " {14: 0.009999999999999898, 13: 0.019999999999999907},\n",
        " {13: 0.0, 14: 0.0},\n",
-       " {12: 0.010000000000000009, 8: -0.020000000000000018},\n",
-       " {12: 0.020000000000000018, 14: 0.0},\n",
-       " {11: 0.020000000000000018, 14: 0.010000000000000009},\n",
-       " {12: -0.010000000000000009, 13: -0.010000000000000009},\n",
-       " {14: 0.0, 12: -0.020000000000000018},\n",
+       " {8: 0.0, 12: 0.010000000000000009},\n",
        " {13: 0.0, 14: 0.0},\n",
-       " {12: 0.020000000000000018, 14: 0.010000000000000009},\n",
-       " {7: 0.010000000000000009, 10: -0.020000000000000018},\n",
-       " {14: 0.010000000000000009, 11: -0.010000000000000009},\n",
+       " {14: 0.0, 13: 0.010000000000000009},\n",
+       " {12: 0.0, 11: 0.010000000000000009},\n",
+       " {11: 0.010000000000000009, 14: 0.050000000000000044},\n",
+       " {12: 0.0, 13: 0.0},\n",
+       " {12: -0.010000000000000009, 11: 0.020000000000000018},\n",
        " {13: 0.0, 14: 0.0},\n",
-       " {11: 0.0, 13: 0.0},\n",
-       " {11: 0.0, 14: -0.010000000000000009}]"
+       " {11: 0.010000000000000009, 12: 0.050000000000000044},\n",
+       " {5: 0.0, 13: 0.0},\n",
+       " {9: -0.020000000000000018, 13: 0.0},\n",
+       " {13: 0.0, 14: 0.0},\n",
+       " {14: -0.020000000000000018, 6: -0.010000000000000009},\n",
+       " {14: -0.010000000000000009, 11: 0.0}]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1092,7 @@
     "    for i in range(image_clusters.shape[0]):\n",
     "        for j in range(image_clusters.shape[1]):\n",
     "            value = image_clusters[i, j]\n",
-    "            if value in selected_clusters:\n",
+    "            if value == selected_clusters:\n",
     "                hsv = each_cluster_color[value]\n",
     "                rgb_image[i, j] = hsv\n",
     "\n",
@@ -1119,13 +1107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i, image in enumerate(images_clusters_importance):\n",
-    "    important_clusters = list(image.keys())\n",
-    "    display_selected_clusters(new_clusters[i], each_cluster_color, important_clusters, i)"
+    "    important_clusters = list(image.ke  ys())\n",
+    "    display_selected_clusters(new_clusters[i], each_cluster_color, important_clusters[1], i)"
    ]
   }
  ],
